--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,30 @@ body {
     text-wrap: balance;
   }
 }
+
+.signInSignUpContainer {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+background-color: rgb(243, 224, 200);
+}
+
+.loginButton {
+  background-color: #A66914;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  outline: none;
+  transition: background-color 0.3s;
+}
+
+.loginButton:hover {
+  background-color: #835514;
+}
