--- a/app/globals.css
+++ b/app/globals.css
@@ -58,3 +58,13 @@ background-color: rgb(243, 224, 200);
 .loginButton:hover {
   background-color: #835514;
 }
+
+.event-hoverable {
+  cursor: pointer;
+  color:black
+}
+
+.event-card {
+  box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.5);
+  padding: 4px;
+}
